--- a/NPC_FLIP_simulations.Rmd
+++ b/NPC_FLIP_simulations.Rmd
@@ -104,6 +104,7 @@ def plot_simulation_attributes(stats,
 ```
 
 ```{python id="lzmLU0YTw74H", jupyter={'source_hidden': True}}
+# 
 def get_ts_time_series(dt_sec, **kwargs):
   ts= TransportSimulation(v_N_L=627e-15,
                           v_C_L=2194e-15,
@@ -154,7 +155,7 @@ def get_ts_time_series_2(passive_nuclear_molar_rate_per_sec,
 
 def get_ts_time_series_3(passive_nuclear_molar_rate_per_sec,
                                         is_force,
-                         dt_sec=1e-3,
+                         dt_sec=0.3e-3,
                             **kwargs):
     if is_force:
         v_N_L=762e-15
@@ -172,22 +173,22 @@ def get_ts_time_series_3(passive_nuclear_molar_rate_per_sec,
     ts.fraction_complex_N_to_free_N_per_M_GTP_per_sec = 1.0e+6
     ts.rate_complex_to_NPC_per_free_site_per_sec_per_M= 50e+6
     ts.fraction_complex_NPC_to_complex_N_C_per_sec= 1000.0 # Leakage parameter
-    ts.rate_GDP_N_to_GTP_N_per_sec= 500.0
-    ts.rate_GTP_N_to_GDP_N_per_sec= 0.1
-    ts.rate_GTP_C_to_GDP_C_per_sec= 50.0
+    ts.rate_GDP_N_to_GTP_N_per_sec= 1000.0
+    ts.rate_GTP_N_to_GDP_N_per_sec= 0.2
+    ts.rate_GTP_C_to_GDP_C_per_sec= 500.0
     ts.rate_GTP_N_to_GTP_C_per_sec = 0.5
-    ts.rate_GDP_C_to_GDP_N_per_sec = 0.4
-    ts.rate_GDP_N_to_GDP_C_per_sec = 0.4 
-    ts.rate_complex_to_free_per_sec = 5e-2
-    ts.rate_free_to_complex_per_sec = 0.3e+1
-    ts.fraction_complex_NPC_traverse_per_sec=200
+    ts.rate_GDP_C_to_GDP_N_per_sec = 1.0
+    ts.rate_GDP_N_to_GDP_C_per_sec = 1.0 
+    ts.rate_complex_to_free_per_sec = 0.05
+    ts.rate_free_to_complex_per_sec = 0.01
+    ts.fraction_complex_NPC_traverse_per_sec=4000
     ts.set_params(**kwargs) # override defaults
     return ts
 ```
 
 ```{python id="lzmLU0YTw74H", jupyter={'source_hidden': True}}
 # RUN:
-sim_time_sec= 20.0
+sim_time_sec= 50.0
 sim_flags= dict()#rate_free_to_complex_per_sec=1.0,
                 #max_passive_diffusion_rate_nmol_per_sec_per_M=2e7)
 #ts= get_ts_time_series(dt_sec= 2e-3, **sim_flags)
@@ -376,21 +377,25 @@ def get_transport_simulation_by_passive(passive_nuclear_molar_rate_per_sec,
         v_N_L=627e-15
         v_C_L=2194e-15    
     ts= transport_simulation.TransportSimulation(v_N_L= v_N_L,
-                                                v_C_L= v_C_L)   
-    ts.set_time_step(0.2e-3)
+                                                v_C_L= v_C_L)
+    ts.set_time_step(0.4e-3)
     ts.set_NPC_dock_sites(n_NPCs= 2000, 
                         n_dock_sites_per_NPC= 500)
     ts.set_passive_nuclear_molar_rate_per_sec(passive_nuclear_molar_rate_per_sec) #get_passive_export_rate_per_sec(27,1))
-    ts.fraction_complex_NPC_to_free_N_per_M_GTP_per_sec = 2.5e+6 # TODO: this is doubled relative to complex_N to free_N
-    ts.fraction_complex_N_to_free_N_per_M_GTP_per_sec = 2.5e+6
-    ts.rate_complex_to_NPC_per_free_site_per_sec_per_M= 5e+6
-    ts.fraction_complex_NPC_to_complex_N_C_per_sec= 30.0 # Leakage parameter
-    ts.rate_GDP_N_to_GTP_N_per_sec= 100.0
-    ts.rate_GTP_N_to_GDP_N_per_sec= 0.1
-    ts.rate_GTP_C_to_GDP_C_per_sec= 100.0
-    ts.rate_GTP_N_to_GTP_C_per_sec = 0.1
-    ts.rate_GDP_C_to_GDP_N_per_sec = 30.0
-    ts.rate_GDP_N_to_GDP_C_per_sec = 30.0 
+    ts.fraction_complex_NPC_to_free_N_per_M_GTP_per_sec = 1.0e+6 # TODO: this is doubled relative to complex_N to free_N
+    ts.fraction_complex_N_to_free_N_per_M_GTP_per_sec = 1.0e+6
+    ts.rate_complex_to_NPC_per_free_site_per_sec_per_M= 50e+6
+    ts.fraction_complex_NPC_to_complex_N_C_per_sec= 1000.0 # Leakage parameter
+    ts.rate_GDP_N_to_GTP_N_per_sec= 1000.0
+    ts.rate_GTP_N_to_GDP_N_per_sec= 0.2
+    ts.rate_GTP_C_to_GDP_C_per_sec= 500.0
+    ts.rate_GTP_N_to_GTP_C_per_sec = 0.5
+    ts.rate_GDP_C_to_GDP_N_per_sec = 1.0
+    ts.rate_GDP_N_to_GDP_C_per_sec = 1.0 
+    ts.rate_complex_to_free_per_sec = 0.05
+    ts.rate_free_to_complex_per_sec = 0.01 # SCAN
+    ts.fraction_complex_NPC_traverse_per_sec=4000 # SCAN
+    ts.set_params(**kwargs) # override defaults
     return ts
 test_ts= get_transport_simulation_by_passive(0.02, False)
 print(test_ts.max_passive_diffusion_rate_nmol_per_sec_per_M)
@@ -494,7 +499,7 @@ for passive in np.logspace(np.log10(0.01), np.log10(0.2), 12): #0.01,0.09,6):
         stats_grids_traverse_by_passive_force[key], \
         ts_traverse_by_passive_force[key] = \
             map_param_grid.map_param_grid_parallel( param_range,
-                                                equilibration_time_sec= 20.0,
+                                                equilibration_time_sec= 40.0,
                                                 n_processors= n_processors-3,
                                         transport_simulation_generator= transport_simulation_generator)
         print(f"passive rate {passive} is force {is_force}")
